ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-ingress
spec:
  rules:
    - host: student99.kubes.fun
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: wordpress
                port:
                  number: 80
